--- a/src/components/Main_form.css
+++ b/src/components/Main_form.css
@@ -1,31 +1,36 @@
+* {
+    padding: 0;
+    margin: 0;
+
+}
+
 .form {
-    position: absolute;
-    text-align: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-
-}
-
-.App {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-form {
-    display: flex;
+    height: 100vh;
     flex-direction: column;
+}
+
+.form_title {
+    text-align: center;
+}
+
+.form-container {
     border: 2px solid white;
     padding: 40px;
-    width: 50%;
+    border-radius: 20px;
+    margin-top: 50px;
+    width: 25%;
+}
+
+h1 {
+    font-size: 2.2em;
 }
 
 label {
     margin-bottom: 5px;
+    text-align: left;
 }
 
 input {
@@ -33,6 +38,7 @@ input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    width: 95%;
 }
 
 button {
@@ -40,11 +46,19 @@ button {
     background-color: #ededed;
     color: rgb(45, 45, 45);
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
+    width: 100%;
+    text-align: center;
+    margin: 8px 0px;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #dbd9d9;
+}
+
+.g_btn {
+    text-align: center;
+    border-radius: 20px;
 }
